<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Login"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logintext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/defaultcolor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_above="@id/loginrel" />

    <RelativeLayout
        android:id="@+id/loginrel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        >

        <EditText
            android:id="@+id/usernameinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/username_edittxt"
            android:singleLine="true" />
        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_below="@id/usernameinput"
            android:hint="@string/password_edittxt"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/defaultcolor"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/passwordinput"
            />

        <TextView
            android:id="@+id/signuplink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/signuplinktext"
            android:textSize="20sp"
            android:layout_below="@id/loginbutton"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    </RelativeLayout>

</FrameLayout>